// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`emoji-1.ts: should be able to navigate between emojis 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "this ",
          "type": "text",
        },
        Object {
          "attrs": Object {
            "id": "1f170",
            "shortName": ":a:",
            "text": "🅰",
          },
          "type": "emoji",
        },
        Object {
          "text": " that ",
          "type": "text",
        },
        Object {
          "attrs": Object {
            "id": "atlassian-light_bulb_on",
            "shortName": ":light_bulb_on:",
            "text": ":light_bulb_on:",
          },
          "type": "emoji",
        },
        Object {
          "text": " ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`emoji-1.ts: should close emoji picker on Escape 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "this :smile",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`emoji-1.ts: should convert :) to emoji 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "content": Array [
        Object {
          "text": "heading ",
          "type": "text",
        },
        Object {
          "attrs": Object {
            "id": "1f642",
            "shortName": ":slight_smile:",
            "text": "🙂",
          },
          "type": "emoji",
        },
        Object {
          "text": " ",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`emoji-1.ts:should be able to see emoji if typed the name in full 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "id": "1f600",
            "shortName": ":grinning:",
            "text": "😀",
          },
          "type": "emoji",
        },
        Object {
          "text": " ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`user should not be able to see emoji inside inline code 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "type ",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "type": "code",
            },
          ],
          "text": ":a:",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
